force-app/main/default/objects/Opportunity/fields/CONGA_TxtResC1__c.field-meta.xml
<CustomField>
    <fullName>CONGA_TxtResC1__c</fullName>
    <formula>IF(AND(ISPICKVAL(Tipo_de_Reserva__c, &apos;Reserva sin IVA&apos;), NOT(ISBLANK(Importe_escritura__c))), IF(ISBLANK(Importe_plan_de_pagos_real__c), &apos;B) &apos;, &apos;C) &apos;) + &apos;La cantidad de &apos; + IF(ISBLANK(Importe_escritura__c),&apos; _________ &apos; ,TEXT(Importe_escritura__c)) + &apos;€, Más I.V.A., que se abonarán al otorgamiento de la escritura pública de compraventa.&apos; + IF(NOT(OR(ISBLANK(Numero_Cuotas_Extra__c),Numero_Cuotas_Extra__c &lt; 0)), &apos;; y la cantidad de &apos; + IF(OR(ISBLANK(Numero_Cuotas_Extra__c ), ISBLANK(Importe_Cuota_Extra__c)),&apos; _________ &apos; ,TEXT(Numero_Cuotas_Extra__c * Importe_Cuota_Extra__c)) + &apos;€, más I.V.A. (lo que supone un total de &apos; + IF(OR(ISBLANK(Numero_Cuotas_Extra__c ), ISBLANK(Importe_Cuota_Extra__c), ISBLANK(Porcentaje_IVA__c)),&apos; _________ &apos; ,TEXT(Numero_Cuotas_Extra__c * Importe_Cuota_Extra__c * (1 + Porcentaje_IVA__c))) + &apos;€) se pagará en &apos; + IF(ISBLANK(Numero_Cuotas_Extra__c),&apos; _________ &apos;, TEXT(Numero_Cuotas_Extra__c)) + &apos; plazos de &apos; + IF(ISBLANK(Importe_Cuota_Extra__c),&apos; _________ &apos;, TEXT(Importe_Cuota_Extra__c)) + &apos;€ más I.V.A. cada uno.&apos;, &apos;&apos;) 
,&apos;&apos;) + 
IF(AND(ISPICKVAL(Tipo_de_Reserva__c, &apos;Reserva con IVA&apos;), NOT(ISBLANK(Importe_plan_de_pagos_real__c))), IF(ISBLANK(Reserva__c), &apos;B) &apos;, &apos;C) &apos;) + &apos;La cantidad de &apos; +  IF(ISBLANK(Importe_plan_de_pagos_real__c),&apos; _________ &apos; ,TEXT(Importe_plan_de_pagos_real__c)) + &apos;€, más I.V.A. (lo que supone un total de &apos; + IF(OR(ISBLANK(Importe_plan_de_pagos_real__c), ISBLANK(Porcentaje_IVA__c)),&apos; _________ &apos; ,TEXT(Importe_plan_de_pagos_real__c * (1 + Porcentaje_IVA__c))) + &apos;€), se pagará en &apos; + IF(ISBLANK(Importe_Cuota_Extra__c),&apos; _________ &apos;, TEXT(Importe_Cuota_Extra__c)) + &apos;€ más I.V.A. cada uno durante la construcción, con vencimiento mensual y sucesivos, a partir del &apos; + IF(ISBLANK(Fecha_de_primera_cuota__c),&apos; _________ &apos; , TEXT(DAY(Fecha_de_primera_cuota__c)) + &apos; del &apos; + TEXT(MONTH(Fecha_de_primera_cuota__c)) + &apos; de &apos; + TEXT(YEAR(Fecha_de_primera_cuota__c))) + IF(AND(NOT(ISBLANK(Numero_Cuotas_Extra__c)),Numero_Cuotas_Extra__c &gt; 0), &apos;;y la cantidad de &apos; + TEXT(Numero_Cuotas_Extra__c * Importe_Cuota_Extra__c) + &apos;€, más I.V.A. (lo que supone un total de&apos; + TEXT(Numero_Cuotas_Extra__c * Importe_Cuota_Extra__c * (1 + Porcentaje_IVA__c)) + &apos;€), se pagará en &apos; + TEXT(Numero_Cuotas_Extra__c) + &apos; plazos de &apos; + TEXT(Importe_Cuota_Extra__c) + &apos;€ más I.V.A. cada uno.&apos;, &apos;&apos;) + &apos; Se adjunta como ANEXO II calendario de pagos.&apos;
, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_TxtResC1</label>
    <type>Text</type>
</CustomField>