force-app/main/default/objects/Opportunity/fields/CONGA_TxtResD1__c.field-meta.xml
<CustomField>
    <fullName>CONGA_TxtResD1__c</fullName>
    <formula>IF(ISPICKVAL(Tipo_de_Reserva__c, &apos;Reserva con IVA&apos;), IF(AND(OR(Reserva__c == 0, ISBLANK(Reserva__c)), 
OR(Importe_plan_de_pagos_real__c == 0, ISBLANK(Importe_plan_de_pagos_real__c))), &apos;B) &apos;, &apos;&apos;) +

IF(AND(OR(NOT(Reserva__c == 0), NOT(ISBLANK(Reserva__c))), 
OR(Importe_plan_de_pagos_real__c == 0, ISBLANK(Importe_plan_de_pagos_real__c))), &apos;C) &apos;, &apos;&apos;) +

IF(AND(OR(Reserva__c == 0, ISBLANK(Reserva__c)), 
OR(NOT(Importe_plan_de_pagos_real__c == 0), NOT(ISBLANK(Importe_plan_de_pagos_real__c)))), &apos;B) &apos;, &apos;&apos;) + 

IF(AND(OR(NOT(Reserva__c == 0), NOT(ISBLANK(Reserva__c))), 
OR(NOT(Importe_plan_de_pagos_real__c == 0), NOT(ISBLANK(Importe_plan_de_pagos_real__c)))), &apos;B) &apos;, &apos;&apos;) + 

&apos;La cantidad de &apos; + IF(OR(ISBLANK(Amount), ISBLANK(Pago_Escritura__c)),&apos; _________ &apos; ,TEXT(Amount * Pago_Escritura__c)) + &apos;€, más I.V.A., que se abonarán al otorgamiento de la escritura pública de compraventa.&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_TxtResD1</label>
    <type>Text</type>
</CustomField>