force-app/main/default/objects/Opportunity/fields/CONGA_TxtResD__c.field-meta.xml
<CustomField>
    <fullName>CONGA_TxtResD__c</fullName>
    <formula>IF(OR(ISPICKVAL(Tipo_de_Reserva__c, &apos;Reserva sin IVA&apos;), ISPICKVAL(Tipo_de_Reserva__c, &apos;Reserva con IVA&apos;)),&apos; La cantidad restante hasta completar el precio total, asciende a &apos; +  IF(ISBLANK(Importe_escritura__c),&apos; _________ &apos; ,TEXT(Importe_escritura__c)) + &apos;€, más I.V.A., que se abonarán al otorgamiento de la escritura pública de compraventa.&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_TxtResD</label>
    <type>Text</type>
</CustomField>