force-app/main/default/objects/Opportunity/fields/CONGA_Vencido_Pendiente__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Vencido_Pendiente__c</fullName>
    <label>CONGA_Vencido Pendiente</label>
    <summarizedField>Factura__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Factura__c.Pago_o_Cuota__c</field>
        <operation>contains</operation>
        <value>Cuota, Cuota Extra</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Factura__c.Estado_de_la_factura__c</field>
        <operation>equals</operation>
        <value>Pdte.Envío a Oracle</value>
    </summaryFilterItems>
    <summaryForeignKey>Factura__c.Oportunidad__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>