force-app/main/default/objects/Opportunity/fields/CONGA_Vencido_Pendiente_Total__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Vencido_Pendiente_Total__c</fullName>
    <formula>CONGA_Vencido_Pendiente__c +  CONGA_Vencido_Pendiente_IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Vencido Pendiente Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>