force-app/main/default/objects/Opportunity/fields/CONGA_Ya_Pagado_IVA__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Ya_Pagado_IVA__c</fullName>
    <formula>Acumulado_de_Importe_Pagado__c *  Porcentaje_IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Ya Pagado IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>