force-app/main/default/objects/Opportunity/fields/Contrado_Compraventa_firmado_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Contrado_Compraventa_firmado_DocuSign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrado Compraventa firmado DocuSign</label>
    <type>Checkbox</type>
</CustomField>