force-app/main/default/objects/Opportunity/fields/Contrato_Compraventa_firmado__c.field-meta.xml
<CustomField>
    <fullName>Contrato_Compraventa_firmado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrato Compraventa firmado</label>
    <type>Checkbox</type>
</CustomField>