force-app/main/default/objects/Opportunity/fields/Contrato_Reserva_firmado_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Contrato_Reserva_firmado_DocuSign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrato Reserva firmado DocuSign</label>
    <type>Checkbox</type>
</CustomField>