force-app/main/default/objects/Opportunity/fields/ContratoCompraventafirmadoHelloSIgn__c.field-meta.xml
<CustomField>
    <fullName>ContratoCompraventafirmadoHelloSIgn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cuando se firma el contrato, este campo queda marcado a true.</description>
    <label>Contrato Compraventa firmado HelloSIgn</label>
    <type>Checkbox</type>
</CustomField>