force-app/main/default/objects/Opportunity/fields/ContratoReservafirmadoHellowSign__c.field-meta.xml
<CustomField>
    <fullName>ContratoReservafirmadoHellowSign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cuando se firma un contrato de reserva, este campo quedar marcado a true</description>
    <label>Contrato Reserva firmado HellowSign</label>
    <type>Checkbox</type>
</CustomField>