force-app/main/default/objects/Opportunity/fields/Cuenta_Bancaria_de_mandato__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Bancaria_de_mandato__c</fullName>
    <label>Cuenta Bancaria de mandato (IBAN)</label>
    <length>34</length>
    <type>Text</type>
</CustomField>