force-app/main/default/objects/Opportunity/fields/Cuentas_Contables__c.field-meta.xml
<CustomField>
    <fullName>Cuentas_Contables__c</fullName>
    <label>Cuentas Bancarias</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cuentas Operativas</fullName>
            </value>
            <value>
                <fullName>Cuentas Especiales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>