force-app/main/default/objects/Opportunity/fields/Cuota_Hipoteca__c.field-meta.xml
<CustomField>
    <fullName>Cuota_Hipoteca__c</fullName>
    <label>Cuota Hipoteca</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>