force-app/main/default/objects/Opportunity/fields/Desactivar_Bloqueos_PBC__c.field-meta.xml
<CustomField>
    <fullName>Desactivar_Bloqueos_PBC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desactivar Bloqueos PBC</label>
    <type>Checkbox</type>
</CustomField>