force-app/main/default/objects/Opportunity/fields/Desajuste_plan_de_pagos__c.field-meta.xml
<CustomField>
    <fullName>Desajuste_plan_de_pagos__c</fullName>
    <formula>IF(N_Cuotas__c&gt;1,(Amount*Pago_Contrato__c) - ((Numero_Cuotas_Extra__c * Importe_Cuota_Extra__c) + (N_Cuotas__c*Importe_de_Cuota__c)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cuánto falta por pagar del total del plan de pagos como consecuencia de los decimales de las cuotas.</inlineHelpText>
    <label>Desajuste plan de pagos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>