force-app/main/default/objects/Opportunity/fields/Descripcion_Personalizacion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Personalizacion__c</fullName>
    <label>Descripción Personalización</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>