force-app/main/default/objects/Opportunity/fields/Descripcion_Viviendas__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Viviendas__c</fullName>
    <label>Descripción Viviendas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>