force-app/main/default/objects/Opportunity/fields/Email_Jefe_Planificacion__c.field-meta.xml
<CustomField>
    <fullName>Email_Jefe_Planificacion__c</fullName>
    <label>Email Jefe Planificación</label>
    <type>Email</type>
</CustomField>