force-app/main/default/objects/Opportunity/fields/Email_responsable_comercial__c.field-meta.xml
<CustomField>
    <fullName>Email_responsable_comercial__c</fullName>
    <label>Email responsable comercial</label>
    <type>Email</type>
</CustomField>