force-app/main/default/objects/Opportunity/fields/EntidadBancariaVendedor__c.field-meta.xml
<CustomField>
    <fullName>EntidadBancariaVendedor__c</fullName>
    <formula>Promocion__r.Entidad_Bancaria1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entidad Bancaria Vendedor</label>
    <type>Text</type>
</CustomField>