force-app/main/default/objects/Opportunity/fields/Entrada_Intereses__c.field-meta.xml
<CustomField>
    <fullName>Entrada_Intereses__c</fullName>
    <label>Entrada Intereses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>