force-app/main/default/objects/Opportunity/fields/Entrada_principal__c.field-meta.xml
<CustomField>
    <fullName>Entrada_principal__c</fullName>
    <label>Entrada principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>