force-app/main/default/objects/Opportunity/fields/EntregaAportacionCapital__c.field-meta.xml
<CustomField>
    <fullName>EntregaAportacionCapital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entrega aportación capital</label>
    <type>Checkbox</type>
</CustomField>