force-app/main/default/objects/Opportunity/fields/Enviado_AML__c.field-meta.xml
<CustomField>
    <fullName>Enviado_AML__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviado AML</label>
    <type>Checkbox</type>
</CustomField>