force-app/main/default/objects/Opportunity/fields/Es_Precio_Principal__c.field-meta.xml
<CustomField>
    <fullName>Es_Precio_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Precio Principal</label>
    <type>Checkbox</type>
</CustomField>