force-app/main/default/objects/Opportunity/fields/EtapaPreviaCancelacion__c.field-meta.xml
<CustomField>
    <fullName>EtapaPreviaCancelacion__c</fullName>
    <label>Etapa previa Cancelación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>