force-app/main/default/objects/Opportunity/fields/ExisteFacturaAportacionCapital__c.field-meta.xml
<CustomField>
    <fullName>ExisteFacturaAportacionCapital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existe factura aportación capital</label>
    <type>Checkbox</type>
</CustomField>