force-app/main/default/objects/Opportunity/fields/ExisteFacturaEntrada__c.field-meta.xml
<CustomField>
    <fullName>ExisteFacturaEntrada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Evitar facturas duplicada de estado Entrada</description>
    <label>Existe Factura Entrada</label>
    <type>Checkbox</type>
</CustomField>