force-app/main/default/objects/Opportunity/fields/ExisteFacturaEscrituracion__c.field-meta.xml
<CustomField>
    <fullName>ExisteFacturaEscrituracion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Evitar facturas duplicada de estado Escrituración</description>
    <label>Existe Factura Escrituracion</label>
    <type>Checkbox</type>
</CustomField>