force-app/main/default/objects/Opportunity/fields/ExisteFacturaMejoras__c.field-meta.xml
<CustomField>
    <fullName>ExisteFacturaMejoras__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existe Factura Mejoras</label>
    <type>Checkbox</type>
</CustomField>