force-app/main/default/objects/Opportunity/fields/ExisteFacturaReserva__c.field-meta.xml
<CustomField>
    <fullName>ExisteFacturaReserva__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Evitar facturas duplicada de estado Reserva</description>
    <label>Existe Factura Reserva</label>
    <type>Checkbox</type>
</CustomField>