force-app/main/default/objects/Opportunity/fields/Facturacion_por_separado__c.field-meta.xml
<CustomField>
    <fullName>Facturacion_por_separado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facturación por separado</label>
    <type>Checkbox</type>
</CustomField>