force-app/main/default/objects/Opportunity/fields/Fecha1visita__c.field-meta.xml
<CustomField>
    <fullName>Fecha1visita__c</fullName>
    <formula>Account.Fecha1Visita__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha 1ª visita</label>
    <type>Date</type>
</CustomField>