force-app/main/default/objects/Opportunity/fields/Fecha_de_Escrituracion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Escrituracion__c</fullName>
    <label>Fecha de Escrituración</label>
    <type>Date</type>
</CustomField>