force-app/main/default/objects/Opportunity/fields/Fecha_de_firma_del_mandato__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_firma_del_mandato__c</fullName>
    <label>Fecha de firma del mandato</label>
    <type>Date</type>
</CustomField>