force-app/main/default/objects/Opportunity/fields/Fecha_de_primera_cuota__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_primera_cuota__c</fullName>
    <inlineHelpText>Al cliente se le pasará el día 10. Esta fecha indica el mes en el que se quiere pasar la primera cuota.</inlineHelpText>
    <label>Fecha de primera cuota</label>
    <type>Date</type>
</CustomField>