force-app/main/default/objects/Opportunity/fields/Fecha_firma_Contrato_Compraventa__c.field-meta.xml
<CustomField>
    <fullName>Fecha_firma_Contrato_Compraventa__c</fullName>
    <label>Fecha firma Contrato Compraventa</label>
    <type>Date</type>
</CustomField>