force-app/main/default/objects/Opportunity/fields/Fecha_firma_Contrato_Reserva__c.field-meta.xml
<CustomField>
    <fullName>Fecha_firma_Contrato_Reserva__c</fullName>
    <label>Fecha firma Contrato Reserva</label>
    <type>Date</type>
</CustomField>