force-app/main/default/objects/Opportunity/fields/Fecha_limite_Apalabrado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_limite_Apalabrado__c</fullName>
    <label>Fecha límite &quot;Apalabrado&quot;</label>
    <type>Date</type>
</CustomField>