force-app/main/default/objects/Opportunity/fields/Fecha_Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento__c</fullName>
    <label>Fecha Vencimiento</label>
    <type>Date</type>
</CustomField>