force-app/main/default/objects/Opportunity/fields/FechaCancelacion__c.field-meta.xml
<CustomField>
    <fullName>FechaCancelacion__c</fullName>
    <label>Fecha de cancelación</label>
    <type>Date</type>
</CustomField>