force-app/main/default/objects/Opportunity/fields/FechadeResolucion__c.field-meta.xml
<CustomField>
    <fullName>FechadeResolucion__c</fullName>
    <label>Fecha de Resolución</label>
    <type>Date</type>
</CustomField>