force-app/main/default/objects/Opportunity/fields/FechaEscrituracionReal__c.field-meta.xml
<CustomField>
    <fullName>FechaEscrituracionReal__c</fullName>
    <label>Fecha escrituración real</label>
    <type>Date</type>
</CustomField>