force-app/main/default/objects/Opportunity/fields/FechaPosventa__c.field-meta.xml
<CustomField>
    <fullName>FechaPosventa__c</fullName>
    <formula>FechaEscrituracionReal__c +  Promocion__r.DiasPosventa__c</formula>
    <label>Fecha posventa</label>
    <type>Date</type>
</CustomField>