force-app/main/default/objects/Opportunity/fields/FechaPreReserva__c.field-meta.xml
<CustomField>
    <fullName>FechaPreReserva__c</fullName>
    <label>Fecha Pre-Reserva</label>
    <type>Date</type>
</CustomField>