force-app/main/default/objects/Opportunity/fields/FormadePagoaLlaves__c.field-meta.xml
<CustomField>
    <fullName>FormadePagoaLlaves__c</fullName>
    <label>Forma de Pago a Llaves</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque bancario</fullName>
            </value>
            <value>
                <fullName>Tranferencia OMF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>