force-app/main/default/objects/Opportunity/fields/FormaPagoMejoras__c.field-meta.xml
<CustomField>
    <fullName>FormaPagoMejoras__c</fullName>
    <description>Campo auto rellenado en Opportunity_Triggered_After_Insert para ser mostrado en la VF GeneradorPDFMejoras</description>
    <label>Forma de pago Mejoras</label>
    <type>TextArea</type>
</CustomField>