force-app/main/default/objects/Opportunity/fields/Generar_Facturas_de_Clientes__c.field-meta.xml
<CustomField>
    <fullName>Generar_Facturas_de_Clientes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generar Facturas de Clientes</label>
    <type>Checkbox</type>
</CustomField>