force-app/main/default/objects/Opportunity/fields/Hipoteca_Principal__c.field-meta.xml
<CustomField>
    <fullName>Hipoteca_Principal__c</fullName>
    <label>Hipoteca Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>