force-app/main/default/objects/Opportunity/fields/Idioma_Plantilla__c.field-meta.xml
<CustomField>
    <fullName>Idioma_Plantilla__c</fullName>
    <label>Idioma Plantilla</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>EN</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>