force-app/main/default/objects/Opportunity/fields/Importe_de_Cuota__c.field-meta.xml
<CustomField>
    <fullName>Importe_de_Cuota__c</fullName>
    <label>Importe de Cuota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>