force-app/main/default/objects/Opportunity/fields/Importe_de_Entrada__c.field-meta.xml
<CustomField>
    <fullName>Importe_de_Entrada__c</fullName>
    <description>Importe de entrada = Cantidad * (% Pago Firma Contrato)</description>
    <formula>Pago_Contrato_al_contado__c  *   Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe de Entrada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>