force-app/main/default/objects/Opportunity/fields/Importe_escritura__c.field-meta.xml
<CustomField>
    <fullName>Importe_escritura__c</fullName>
    <formula>(Amount    *   Pago_Escritura__c) +  Desajuste_plan_de_pagos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe escritura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>