force-app/main/default/objects/Opportunity/fields/Importe_plan_de_pagos__c.field-meta.xml
<CustomField>
    <fullName>Importe_plan_de_pagos__c</fullName>
    <formula>Amount  *  Pago_Contrato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe plan de pagos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>