force-app/main/default/objects/Opportunity/fields/Importe_plan_de_pagos_real__c.field-meta.xml
<CustomField>
    <fullName>Importe_plan_de_pagos_real__c</fullName>
    <description>Cantidad real a pagar en cuotas, teniendo en cuenta los decimales</description>
    <formula>(Numero_Cuotas_Extra__c * Importe_Cuota_Extra__c) + (N_Cuotas__c*Importe_de_Cuota__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cantidad real a pagar en cuotas</inlineHelpText>
    <label>Importe plan de pagos real</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>