force-app/main/default/objects/Opportunity/fields/ImporteMejoras__c.field-meta.xml
<CustomField>
    <fullName>ImporteMejoras__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Importe relativo a mejoras añadidas a la oportunidad. No contabilizada para las comisiones</description>
    <label>Importe mejoras</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>